# gruvbox-gtk-theme

./: INSTALL.md  README.md  meson.build  meson_options.txt
src/: index.theme.in  meson.build
src/gtk-3.0/: meson.build
src/gtk-3.0/assets/: meson.build
src/gtk-3.0/sass/: _applications.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  gtk.scss.in
src/gtk-4.0/: meson.build
src/gtk-4.0/assets/: assets.svg.in  meson.build
src/gtk-4.0/sass/: _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _libadwaita-defaults.scss  _libadwaita.scss  _palette.scss  gtk.scss.in
