option(
  'themes',
  type: 'array',
  choices: ['gtk3', 'gtk4'],
  description: 'List of themes to build',
)

option(
  'modes',
  type: 'array',
  choices: ['light',  'dark'],
  description: 'List of theme modes to build',
)

option(
  'contrasts',
  type: 'array',
  choices: ['hard', 'medium', 'soft'],
  description: 'List of theme contrast configurations to build',
)

option(
  'accents',
  type: 'array',
  choices: ['red', 'green', 'yellow', 'blue', 'purple', 'aqua', 'orange'],
  description: 'List of theme accent color variants to build',
)

