option(
  'themes',
  type: 'array',
  choices: ['gtk3', 'gtk4'],
  description: 'List of themes to build',
)

option(
  'mode',
  type: 'combo',
  choices: ['light', 'dark'],
  description: 'Theme mode to build',
)

option(
  'contrast',
  type: 'combo',
  choices: ['hard', 'medium', 'soft'],
  description: 'Theme contrast configuration to build',
)

option(
  'accent',
  type: 'combo',
  choices: ['red', 'green', 'yellow', 'blue', 'purple', 'aqua', 'orange'],
  description: 'Theme accent color variant to build',
)

