option(
  'themes',
  type: 'array',
  choices: ['gtk3', 'gtk4'],
  description: 'List of themes to build',
)

option(
  'mode',
  type: 'combo',
  choices: ['light', 'dark'],
  value: 'dark',
  description: 'Theme mode to build',
)

option(
  'contrast',
  type: 'combo',
  choices: ['hard', 'medium', 'soft'],
  value: 'medium',
  description: 'Theme contrast configuration to build',
)

option(
  'accent',
  type: 'combo',
  choices: ['red', 'green', 'yellow', 'blue', 'purple', 'aqua', 'orange'],
  value: 'yellow',
  description: 'Theme accent color variant to build',
)

